openmediavault (0.5.10) ) stable; urgency=low

  * Mantis 0000818: Monit alert: filesystem doesn't exist when checking
    a filesystem. Use only mount points and not device paths.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 13 Sep 2013 18:07:33 +0200

openmediavault (0.5.9) stable; urgency=low

  * Various improvements and bugfixes.
  * Mantis 0000817: Powermanagement - Power down button does not work.
  * Mantis 0000818: Monit alert: filesystem doesn't exist when checking
    a filesystem.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 09 Sep 2013 18:02:39 +0200

openmediavault (0.5.8) stable; urgency=low

  * Update locales.
  * Various WebGUI API improvements.
  * Add option to enable/disable software update notifications.
  * Mantis 0000830: Shared folders "Privileges" dialog.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 05 Sep 2013 23:27:33 +0200

openmediavault (0.5.7) stable; urgency=low

  * Various improvements and bugfixes.
  * Fix bug in user/group import RPC.
  * Fix bug in filesystem quota dialog.
  * Fix SSL cert issue when activating TLS for the FTP service.
  * Mantis 0000815: When log on a non-administrator account,there is some
    "undefined" text.
  * Mantis 0000817: Powermanagement - Power down button does not work.
  * Mantis 0000819: Column-Width not saved in Diagnostic -> System logs.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 02 Sep 2013 18:21:42 +0200

openmediavault (0.5.6) stable; urgency=low

  * Various improvements and bugfixes.
  * Mantis 0000810: Web interface does not load at all, blank screen.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 28 Aug 2013 18:24:42 +0200

openmediavault (0.5.5) stable; urgency=low

  * Mantis 0000809: Not displaying FTP-log.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 28 Aug 2013 18:13:53 +0200

openmediavault (0.5.4) stable; urgency=low

  * Various improvements and bugfixes.