@@ -137,3 +137,7 @@ div#headerrlogo {
 .x-btn-icon-16x16 {
 	background-size: 16px 16px;
 }
+/* Toolbar */
+.x-toolbar-applycfg {
+	background: #ffeb99
+}
