@@ -22,7 +22,7 @@
 // require("js/omv/SessionManager.js")
 // require("js/omv/Rpc.js")
 // require("js/omv/window/MessageBox.js")
-// require("js/omv/button/ApplyCfg.js")
+// require("js/omv/toolbar/ApplyCfg.js")
 // require("js/omv/workspace/tab/Panel.js")
 // require("js/omv/workspace/node/tree/Panel.js")
 // require("js/omv/workspace/node/panel/Panel.js")
@@ -39,7 +39,7 @@ Ext.define("OMV.workspace.Workspace", {
 	requires: [
 		"OMV.SessionManager",
 		"OMV.Rpc",
-		"OMV.button.ApplyCfg",
+		"OMV.toolbar.ApplyCfg",
 		"OMV.window.MessageBox",
 		"OMV.form.field.LanguageComboBox",
 		"OMV.workspace.node.tree.Panel",
@@ -111,12 +111,6 @@ Ext.define("OMV.workspace.Workspace", {
 					text: "&nbsp;"
 				},{
 					xtype: "tbfill"
-				},{
-					xtype: "applycfgbutton",
-					hidden: !OMV.SessionManager.isAdministrator()
-				},{
-					xtype: "tbseparator",
-					hidden: !OMV.SessionManager.isAdministrator()
 				},{
 					xtype: "languagecombo"
 				},{
@@ -251,6 +245,8 @@ Ext.define("OMV.workspace.Workspace", {
 						}
 					})
 				}]
+			},{
+				xtype: "applycfgtoolbar"
 			}]
 		});
 	},
