@@ -2,6 +2,9 @@ openmediavault (0.5.10) ) stable; urgency=low
 
   * Mantis 0000818: Monit alert: filesystem doesn't exist when checking
     a filesystem. Use only mount points and not device paths.
+  * Mantis 0000842: NFS duplicate export entries.
+  * Mantis 0000846: TLD ".invalid" not working.
+  * Mantis 0000849: Configuration change improvement.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Thu, 13 Sep 2013 18:07:33 +0200
 
